; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/iscsid/extr_chap.c_chap_authenticate.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/iscsid/extr_chap.c_chap_authenticate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chap = type { i32, i32, i32 }

@CHAP_DIGEST_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @chap_authenticate(%struct.chap* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.chap*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.chap* %0, %struct.chap** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i32, i32* @CHAP_DIGEST_LEN, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %6, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %7, align 8
  %13 = load %struct.chap*, %struct.chap** %4, align 8
  %14 = getelementptr inbounds %struct.chap, %struct.chap* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = load %struct.chap*, %struct.chap** %4, align 8
  %18 = getelementptr inbounds %struct.chap, %struct.chap* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = trunc i64 %10 to i32
  %21 = call i32 @chap_compute_md5(i32 %15, i8* %16, i32 %19, i32 4, i8* %12, i32 %20)
  %22 = load %struct.chap*, %struct.chap** %4, align 8
  %23 = getelementptr inbounds %struct.chap, %struct.chap* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = trunc i64 %10 to i32
  %26 = call i64 @memcmp(i32 %24, i8* %12, i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %8, align 4
  br label %30

29:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  store i32 1, i32* %8, align 4
  br label %30

30:                                               ; preds = %29, %28
  %31 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %31)
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @chap_compute_md5(i32, i8*, i32, i32, i8*, i32) #2

declare dso_local i64 @memcmp(i32, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
